# ParallelComputingFinalProject

./: .gitignore  CMakeLists.txt  ConfigBuild.sh  ConfigMFEM.sh  ConfigMicromorphic.sh  ParallelPartialAssembly.cpp  ParallelVTKWriter.cpp  README.md  UnitSquare.msh  UnitSquareMesh.py  main.cpp  mfem-4.7.tgz
MicromorphicLibrary/: CMakeLists.txt  GlobalStaticCondensation.cpp  GlobalStaticCondensation.hpp  MicromorphicIntegrator.cpp  MicromorphicIntegrator.hpp  MicromorphicPartialAssembly.cpp  MicromorphicPartialAssemblyKernels.hpp  MicromorphicStressStrain.cpp  MicromorphicStressStrain.hpp
Plots/: Plots.py
VTKWriterLibrary/: CMakeLists.txt  VTKWriter.cpp  VTKWriter.hpp
